[project]
name = "ralph"
version = "0.1.0"
description = "A CLI harness for running LLM agents on PRD-driven tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ralph = "ralph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ralph"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.13",
]
